--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node inde.js"
+    "start": "node index.js"
   },
   "author": "Ivainge",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.61.0",
